--- a/src/Polygon.Connector.QUIKLua/Polygon.Connector.QUIKLua.csproj
+++ b/src/Polygon.Connector.QUIKLua/Polygon.Connector.QUIKLua.csproj
@@ -1,16 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net45;netstandard1.6</TargetFrameworks>
+    <TargetFrameworks>netstandard1.6</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="10.4.0" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="System.Text.Encoding" Version="4.3.0" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="LUA/*.lua" PackagePath="content/LUA" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Polygon.Connector\Polygon.Connector.csproj" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard1.6'">
+    <PackageReference Include="System.Text.Encoding.CodePages">
+      <Version>4.5.1</Version>
+    </PackageReference>
   </ItemGroup>
 </Project>
